finshed design of first card except the buy button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,44 @@
     </header>
     <main>
         <section class="section-buy-now-cards">
-            
+            .
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <!-- Card front  -->
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading--span card__heading--span--1">
+                                        Pizza Party
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>Up to 25 people</li>
+                                    <li>1 Beer Barrel</li>
+                                    <li>1 Spirit & Mixer</li>
+                                    <li>5 Pizzas</li>
+                                    <li>Next Day Cleaning</li>
+                                </ul>
+                            </div>
+                        </div>
+                         <!-- card back -->
+                         <div class="card__side card__side--back card__side--back--1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">only</p>
+                                    <p class="card__price-value">£297</p>
+                                </div>
+                                <a href="#popup" class="btn btn--white">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                <div class="column-1-of-3"></div>
+                <div class="column-1-of-3"></div>
+            </div>
         </section>
     </main>
 </body>
