change the buy now button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <p class="card__price-only">only</p>
                                     <p class="card__price-value">£297</p>
                                 </div>
-                                <a href="#popup" class="btn btn--white">Buy Now</a>
+                                <a href="#popup" class="btn btn--animated btn--primary">Buy Now</a>
                             </div>
                         </div>
                     </div>
